--- a/QuanLySanPham/View/Login.xaml
+++ b/QuanLySanPham/View/Login.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QuanLySanPham.View.Login"
              xmlns:viewmodel="clr-namespace:QuanLySanPham.ViewModel"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:DataType="viewmodel:LoginViewModel"
              NavigationPage.HasNavigationBar="False">
 
@@ -61,7 +62,13 @@
                     <Entry Grid.Column="1"
                            TextColor="Black"
                            Placeholder="Hãy nhập tên của bạn"
-                           Text="{Binding Username}"/>
+                           Text="{Binding Username}">
+                        <Entry.Behaviors>
+                            <toolkit:EventToCommandBehavior
+                                EventName="Completed"
+                                Command="{Binding EntryCompletedCommand}" />
+                        </Entry.Behaviors>
+                    </Entry>
                 </Grid>
 
                 <Button Text="Tiếp tục"
