can say it done

--- a/QuanLySanPham/View/AddSanPham.xaml
+++ b/QuanLySanPham/View/AddSanPham.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QuanLySanPham.View.AddSanPham"
              xmlns:viewmodel="clr-namespace:QuanLySanPham.ViewModel"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:DataType="viewmodel:AddSanPhamViewModel">
 
     <VerticalStackLayout>
@@ -24,13 +25,31 @@
 
                 <Grid Margin="0, 30, 0, 0" RowDefinitions="Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto, Auto" RowSpacing="20">
                     <Label Grid.Row="0" Text="Nhập mã sản phẩm" FontAttributes="Bold" FontSize="Medium" TextColor="DarkBlue"/>
-                    <Entry Grid.Row="1" Text="{Binding MaSanPham}" Placeholder="Nhập mã sản phẩm"/>
+                    <Entry Grid.Row="1" 
+                           x:Name="EntryMaSanPham"
+                           Text="{Binding MaSanPham}" 
+                           ReturnType="Next"
+                           toolkit:SetFocusOnEntryCompletedBehavior.NextElement="{x:Reference EntryTen}"
+                           Placeholder="Nhập mã sản phẩm"/>
                     <Label Grid.Row="2" Text="Nhập tên sản phẩm" FontAttributes="Bold" FontSize="Medium" TextColor="DarkBlue"/>
-                    <Entry Grid.Row="3" Text="{Binding Ten}" Placeholder="Nhập tên sản phẩm"/>
+                    <Entry Grid.Row="3" 
+                           x:Name="EntryTen"
+                           ReturnType="Next"
+                           toolkit:SetFocusOnEntryCompletedBehavior.NextElement="{x:Reference EntryGiaTien}"
+                           Text="{Binding Ten}" 
+                           Placeholder="Nhập tên sản phẩm"/>
                     <Label Grid.Row="4" Text="Nhập đơn giá" FontAttributes="Bold" FontSize="Medium" TextColor="DarkBlue"/>
-                    <Entry Grid.Row="5" Text="{Binding GiaTien}" Placeholder="Nhập đơn giá"/>
+                    <Entry Grid.Row="5" 
+                           x:Name="EntryGiaTien"
+                           ReturnType="Next"
+                            toolkit:SetFocusOnEntryCompletedBehavior.NextElement="{x:Reference EntrySoLuong}"
+                           Text="{Binding GiaTien}" 
+                           Placeholder="Nhập đơn giá"/>
                     <Label Grid.Row="6" Text="Nhập số lượng" FontAttributes="Bold" FontSize="Medium" TextColor="DarkBlue"/>
-                    <Entry Grid.Row="7" Text="{Binding SoLuong}" Placeholder="Nhập số lượng"/>
+                    <Entry Grid.Row="7" 
+                           x:Name="EntrySoLuong"
+                           Text="{Binding SoLuong}" 
+                           Placeholder="Nhập số lượng"/>
 
                     <Grid Grid.Row="8"
                           ColumnDefinitions="*, *"
